package src.Utils.Exception.CriacaoLoginSenha;

public class LoginInvalidoException extends Exception {
    public LoginInvalidoException(String message){
        super(message);
    }
}
