package src.Utils.Exception.CriacaoLoginSenha;

public class SenhaInvalidaException extends Exception {
    public SenhaInvalidaException(String message){
        super(message);
    }
}
