package src.Utils.Exception.TipoUsuario;

public class TipoUsuarioInvalidoException extends Exception{
    public TipoUsuarioInvalidoException(String message){
        super(message);
    }
}
