package src.Utils;

public enum TipoUsuarios {
    ANALISTA_DE_SISTEMAS,
    GERENTE,
    PROGRAMADOR
}
