@startuml interacaoUsuarioEfachada

package "src.View" {
    class UsuarioFronteira {
        - facade: UserEquipeFacade
        - scanner: Scanner
        + UsuarioFronteira()
        + cadastrarNovoUsuario()
    }
}

package "src.Facade" {
    class UserEquipeFacade {
        - instance: UserEquipeFacade
        - controladores: Map<TipoUsuarios, UsuarioController>
        + getInstance(): UserEquipeFacade
        + criarUsuario(String, String, String, String): UsuarioAbstrato
    }
}

package "src.Utils" {
    enum TipoUsuarios {
        ANALISTA_DE_SISTEMAS
        GERENTE
        PROGRAMADOR
    }
}

package "src.Utils.Validacoes" {
    class UsuarioValidator {
        + validarLogin(String): void
        + validarSenha(String): void
        + mapearTipo(String): TipoUsuarios
    }
}

package "src.Utils.Exception.TipoUsuario" {
    class TipoUsuarioInvalidoException
}

package "src.Utils.Exception.CriacaoLoginSenha" {
    class LoginInvalidoException
    class SenhaInvalidaException
}

UsuarioFronteira -right-> UserEquipeFacade
UsuarioFronteira ..> Scanner
UsuarioFronteira ..> TipoUsuarios

UserEquipeFacade --> UsuarioController
UserEquipeFacade ..> UsuarioValidator
UserEquipeFacade ..> TipoUsuarioInvalidoException

UsuarioValidator --> LoginInvalidoException
UsuarioValidator --> SenhaInvalidaException

@enduml
